--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "sweetalert": "^2.1.2"
   }
 }
