--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Thy696/weekend-sql-to-do-list#readme",
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^8.0.3",
